<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/listaFavoritos"
            android:icon="@drawable/ic_heart"
            android:title="Favoritos Base de datos" />
        <item
            android:id="@+id/fragment_Sucursales"
            android:icon="@drawable/ic_map"
            android:title="@string/nav_slideshow" />
        <item
            android:id="@+id/fragment_Productos"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="Menu base de datos online" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/nav_menu" />


    </group>
</menu>