<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.reto2.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.reto2.ui.gallery.GalleryFragment"
        android:label="@string/nav_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.reto2.MenuFragment"
        android:label="@string/nav_menu"
        tools:layout="@layout/fragment_menu" />
    <activity
        android:id="@+id/mainActivitySQL"
        android:name="com.example.reto2.presentacion.MainActivitySQL"
        android:label="activity_mainsql"
        tools:layout="@layout/activity_mainsql" />
    <fragment
        android:id="@+id/fragment_Sucursales"
        android:name="com.example.reto2.Fragment_Sucursales"
        android:label="Fragment_Sucursales" />
    <activity
        android:id="@+id/listaFavoritos"
        android:name="com.example.reto2.presentacion.ListaFavoritos"
        android:label="activity_lista_favoritos"
        tools:layout="@layout/activity_lista_favoritos" />
    <fragment
        android:id="@+id/fragment_Productos"
        android:name="com.example.reto2.presentacion.Fragment_Productos"
        android:label="@string/nav_menu" />
</navigation>