<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MenuFragment">

    <TextView
        android:id="@+id/title_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="46dp"
        android:textAlignment="center"
        android:fontFamily="@font/pacificofont"
        android:text="@string/nav_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_chorizo1"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/chorizo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/menu_descripcion1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/pacificofont"
                        android:text="@string/menu_descripcion1"
                        android:textSize="25dp" />

                    <ImageButton
                        android:id="@+id/imageButton1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:onClick="boton_proximamente"
                        android:src="@drawable/ic_heart" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_costillas1"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/costillas" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/menu_descripcion2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/pacificofont"
                        android:text="@string/menu_descripcion2"
                        android:textSize="25dp" />
                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="boton_proximamente"
                        android:src="@drawable/ic_heart" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_lasagna1"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/lasagna" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/menu_descripcion3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/pacificofont"
                        android:text="@string/menu_descripcion3"
                        android:textSize="25dp" />
                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="boton_proximamente"
                        android:src="@drawable/ic_heart" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_pizza1"
                    android:layout_width="208dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/pizza" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/menu_descripcion4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/pacificofont"
                        android:text="@string/menu_descripcion4"
                        android:textSize="25dp" />
                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="boton_proximamente"
                        android:src="@drawable/ic_heart" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_burger1"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/burger" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/menu_descripcion5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/pacificofont"
                        android:text="@string/menu_descripcion5"
                        android:textSize="25dp" />
                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="boton_proximamente"
                        android:src="@drawable/ic_heart" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_tacos1"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/tacos" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/menu_descripcion6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/pacificofont"
                        android:text="@string/menu_descripcion6"
                        android:textSize="25dp" />
                    <ImageButton
                        android:id="@+id/imageButton6"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="boton_proximamente"
                        android:src="@drawable/ic_heart" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_tacos2"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/tacos2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/menu_descripcion7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/pacificofont"
                        android:text="@string/menu_descripcion7"
                        android:textSize="25dp" />
                    <ImageButton
                        android:id="@+id/imageButton7"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="boton_proximamente"
                        android:src="@drawable/ic_heart" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_hotdog"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/hotdog" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/menu_descripcion8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/pacificofont"
                        android:text="@string/menu_descripcion8"
                        android:textSize="25dp" />
                    <ImageButton
                        android:id="@+id/imageButton8"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="boton_proximamente"
                        android:src="@drawable/ic_heart" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>