<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="46dp"
        android:textAlignment="center"
        android:fontFamily="@font/pacificofont"
        android:text="@string/nav_home" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- *********************************************************** -->


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_publicidad1"
                            android:layout_width="410dp"
                            android:layout_height="220dp"
                            android:layout_weight="1"
                            android:src="@drawable/publicidad_01" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_publicidad2"
                            android:layout_width="410dp"
                            android:layout_height="220dp"
                            android:layout_weight="1"
                            android:src="@drawable/publicidad_02" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_publicidad3"
                            android:layout_width="410dp"
                            android:layout_height="220dp"
                            android:layout_weight="1"
                            android:src="@drawable/publicidad_03" />
                    </LinearLayout>

                </LinearLayout>

            <!-- *********************************************************** -->
    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_menu"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:src="@drawable/menu" />

                <TextView
                    android:id="@+id/descripcion_home1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:fontFamily="@font/robotoregular"
                    android:layout_weight="1"
                    android:layout_marginLeft="12dp"
                    android:text="@string/home_descripcion1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_cupon"
                    android:layout_width="176dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:src="@drawable/cupon" />

                <TextView
                    android:id="@+id/descripcion2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:fontFamily="@font/robotoregular"
                    android:layout_weight="1"
                    android:layout_marginLeft="12dp"
                    android:text="@string/home_descripcion2" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>